--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -325,7 +325,8 @@
     <string name="contents_detail_adinfo_array_pipe">"\\|"</string>
     <string name="contents_detail_date_left_">"\\|"</string>
     <string name="contents_detail_pairing_request">ドコモテレビターミナルとのペアリングが必要です</string>
-    <string name="contents_detail_login_button">ログイン</string>
+    <string name="contents_detail_login_button">ログインする</string>
+    <string name="contents_detail_login_message">dアカウントでログインしてください\nログイン後は、ホーム画面に移動します</string>
     <string name="contents_detail_now_on_air_contents_nothing">現在放送中のコンテンツがありません</string>
     <string name="contents_detail_out_house_player_error_msg">視聴いただくには、「リモート視聴設定」が必要です。\n設定＞リモート視聴設定　を行ってください。</string>
     <string name="contents_detail_pairing_button">ペアリングする</string>
