ワーディング修正
Change-Id: Ieceb1d2f9588f40e3deb005a60b74bff98eabdd2

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -287,7 +287,7 @@
     <string name="contents_detail_tab_channel">チャンネル</string>
     <string name="contents_detail_tab_episode">エピソード</string>
     <string name="contents_detail_tab_contents_info">作品情報</string>
-    <string name="contents_detail_hikari_vod_inside_home">本コンテンツはテレビで視聴できます</string>
+    <string name="contents_detail_hikari_vod_inside_home">テレビで視聴できます</string>
     <string name="contents_detail_hikari_vod_agreement">ご覧になるにはコンテンツの契約が必要です。\nドコモテレビターミナルで契約してください</string>
     <string name="contents_detail_no_agreement">視聴いただくには契約が必要です</string>
     <string-array name="contents_detail_tab_vod">
