DREM-2795  初回リリース】【Android】【iOS】ペアリング設定画面にて、STB選択エラーの文言が仕様と異なる DREM-2796  初回リリース】【Android】【デグレード】dアカウント再設定画面からペアリング設定画面に遷移する際に不要な画面遷移がある
Change-Id: Id2d518efbb89db26743f72c15939bcca76441d7a

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -338,7 +338,7 @@
     <string name="channel_list_activity_title">チャンネルリスト</string>
 
     <!-- ペアリング設定画面 -->
-    <string name="paring_setting_search_failed_text">ペアリング可能なデバイスが見つかりませんでした</string>
+    <string name="paring_setting_search_failed_text">ペアリング可能なドコモテレビターミナルが\n見つかりませんでした</string>
     <string name="paring_setting_search_help_text">ドコモテレビターミナルとペアリングするには</string>
     <string name="paring_setting_select_text">ペアリングするドコモテレビターミナルを選択</string>
 
