DREM-1508 [DREM-3-8]録画一覧(ダウンロードエラーとNotification表示) 対応 && ダウンロードエラーの場合の不具合の修正
Change-Id: If598c722505c018e32923eac73a29d754e890fd5

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -188,6 +188,7 @@
     <string name="record_download_cancel_title">ダウンロードを取りやめますか？</string>
     <string name="record_download_cancel_confirm">取りやめる</string>
     <string name="record_download_notification">録画番組をダウンロード中</string>
+    <string name="record_download_notification_channel_name">ダウンロード状況</string>
     <string name="activation_file_path_create_file_msg">アクティベーションファイルパス作成失敗しました。</string>
     <string name="activation_failed_msg">アクティベーション失敗しました。</string>
     <string name="dtcp_init_failed_msg">dtcp init 失敗しました。</string>
