--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -273,6 +273,7 @@
     <string name="stb_application_version_update">ご利用のドコモテレビターミナルでアプリのアップデートが必要です。\nドコモテレビターミナルを起動し、設定＞ドコモサービス設定＞ドコモアプリ管理　から「ドコモテレビターミナルアプリ用アプリ」をアップデートしてください。</string>
     <string name="contents_detail_thumbnail_text_no_pair">ドコモテレビターミナルに接続してください</string>
     <string name="contents_detail_thumbnail_text">テレビで視聴できます</string>
+    <string name="contents_detail_thumbnail_text_unable_viewing">お使いの端末では視聴できません</string>
     <string name="contents_detail_contract_leading_button">契約する</string>
     <string name="contents_detail_tab_program_detail">番組詳細</string>
     <string name="contents_detail_tab_channel">チャンネル</string>
