DREM-2453 コピーライト表示 　 　 マージ時の競合を解消しました。 　 グローバルメニューに、dアニメのコピーライト表記のウェブサイトへの動作遷移を追加しました。 　 誤っていたコメントがあったので、修正しました。
Change-Id: I7cd60f9a4bbdbda7fe10589d353966ffd5d3f902

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -233,6 +233,7 @@
     <string name="nav_menu_item_keyword_search">キーワードで探す</string>
     <string name="nav_menu_item_notice">お知らせ</string>
     <string name="nav_menu_item_setting">設定</string>
+    <string name="nav_menu_item_d_anime_copyright">dアニメストア　コピーライト表記</string>
     <string name="nav_menu_item_hikari_tv_none_action">ひかりＴＶ　</string>
     <string name="nav_menu_item_hikari_tv">ひかりＴＶ</string>
     <string name="nav_menu_item_dtv_channel">dTVチャンネル</string>
