間違えてSprint13にプッシュした修正をSprint2-14にプッシュ
DREM-2781 【初回リリース】【Android】アカウント切替失敗時に表示されるダイアログの文言が仕様と異なる
DREM-2115 【初回リリース】【Android】アプリケーション情報に表示されているアイコンと背景の区切りが不明である
【初回リリース】【Android】設定の「リモート視聴設定」が「マイ番組表設定」の下ではなく「FAQ」の下に表示されてしまう

Change-Id: I681a823579a2ad82accc15f1051c95929b1c82d7

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -339,7 +339,7 @@
     <string name="main_setting_quality_status">status</string>
     <string name="main_setting_remote_paring_request">ペアリングしてください</string>
     <string name="main_setting_stb_application_launch_fail">ドコモテレビターミナルのアプリの起動に失敗しました</string>
-    <string name="main_setting_stb_application_launch_fail_id_notexist">本アプリでログインしているdアカウントのユーザーをドコモテレビターミナル（テレビ側）に登録してください。</string>
+    <string name="main_setting_stb_application_launch_fail_id_notexist">本アプリでログインしているdアカウントのユーザーをドコモテレビターミナル（テレビ側）に登録してください</string>
     <string name="main_setting_dtv_update_message">ドコモテレビターミナルのdTVアプリを最新バージョンにアップデートしてください</string>
     <string name="main_setting_d_anime_store_update_message">ドコモテレビターミナルのdアニメストアアプリを最新バージョンにアップデートしてください</string>
     <string name="main_setting_dtv_channel_update_message">ドコモテレビターミナルのdTVチャンネルアプリを最新バージョンにアップデートしてください</string>
@@ -361,9 +361,9 @@
         <item>dアカウント設定</item>
         <item>ペアリング設定</item>
         <item>マイ番組表設定</item>
+        <item>リモート視聴設定</item>
         <item>外出先視聴時の画質設定</item>
         <item>FAQ</item>
-        <item>リモート視聴設定</item>
         <item>アプリケーション情報</item>
         <item>ライセンス情報</item>
         <item>プライバシーポリシー</item>
