DREM-2856 ダウンロード済みのコンテンツ再修正
Change-Id: Ibe9fd4e9f2b42ede77fc2c7956da19a4f6eae272

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -62,7 +62,7 @@
     <string name="common_my_channel">マイ番組表</string>
     <string name="common_hikari_tv_for_docomo">ひかりTV for docomo</string>
     <string name="common_dtv_channel">dTVチャンネル</string>
-    <string name="common_contents_front_bracket">"（"</string>
+    <string name="common_contents_front_bracket">" ("</string>
     <string name="common_contents_end_bracket">") "</string>
     <string name="common_contents_min">分</string>
 
