DREM-2905【初回リリース】【Android】ビデオジャンルでサブジャンルの「すべて」を選択すると、タイトルが「すべての作品」と表示されてしまう
　文字列リソースの「すべての作品」を「すべて」に変更しました。

Change-Id: I436cc33ec2f6aeb264b6982474f72154f757b1b0

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -214,7 +214,7 @@
     <!-- ビデオ一覧 -->
     <string name="video_content_top_title">ビデオジャンル</string>
     <string name="video_list_genre_all">すべて</string>
-    <string name="video_list_genre_all_contents">すべての作品</string>
+    <string name="video_list_genre_all_contents">すべて</string>
     <string name="video_list_genre_nod">NHKオンデマンド</string>
     <string name="video_list_genre_dtv">dTV</string>
 
