DREM-2925 メモリフルで保存できない録画番組をダウンロードしようとしたとき、容量不足であるというメッセージが表示されない
Change-Id: If0bed6d901268ff57bb77076d602d54526c705ac

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -209,6 +209,7 @@
     <string name="record_download_notification">録画番組をダウンロード中</string>
     <string name="record_download_notification_channel_name">ダウンロード状況</string>
     <string name="record_download_not_completed_msg">録画コンテンツのダウンロードに失敗しました。\n再度録画一覧よりダウンロードを行ってください。</string>
+    <string name="record_download_low_storage_space_msg">端末の容量が不足しているため、ダウンロードできません</string>
     <string name="activation_failed_msg">アクティベーション失敗しました。</string>
 
     <!-- ビデオ一覧 -->
