--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -309,6 +309,7 @@
     <string name="contents_detail_tab_channel">チャンネル</string>
     <string name="contents_detail_tab_episode">エピソード</string>
     <string name="contents_detail_tab_contents_info">作品情報</string>
+    <string name="contents_detail_hikari_video_thumbnail_text">本コンテンツはテレビで視聴できます</string>
     <string name="contents_detail_hikari_channel_agreement">ご覧になるにはチャンネルの契約が必要です。\nドコモテレビターミナルで契約してください。</string>
     <string name="contents_detail_hikari_vod_agreement">ご覧になるにはコンテンツの契約が必要です。\nドコモテレビターミナルで契約してください。</string>
     <string name="contents_detail_no_agreement">視聴いただくには契約が必要です</string>
