DREM-2541 【初回リリース】【Android】【iOS】機内モードかつWi-fi接続OFF時にコンテンツ詳細画面に遷移した場合、ネットワーク未接続ダイアログと異なるダイアログが表示される
Change-Id: I30d1f4e9a965718095a3762345e24692fc806a3b

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -440,6 +440,7 @@
     <string name="network_server_error_message">サーバとの接続に失敗しました</string>
     <string name="network_token_error_message">ユーザ情報の取得に失敗しました</string>
     <string name="network_nw_error_message">ネットワークに接続されていません。ネットワーク接続をご確認ください</string>
+    <string name="network_nw_error_message_dialog">ネットワークに接続できませんでした。\nネットワーク状態を確認してください。</string>
     <string name="network_ssl_error_message">SSL通信に失敗しました</string>
     <string name="network_http_error_message">サーバとの通信に失敗しました</string>
 
